--- a/linktreeclone.html
+++ b/linktreeclone.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Linktree clone</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
-    </head>
-    <body>
-      <div class="container">
-        <div id="image">
-        <img 
-        src="/image/WhatsApp Image.jpeg" 
-        alt="profile picture"
-        />
-        <h3>Faiz Pragata</h3>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>test</title>
+</head>
+<body class="bg-gradient-to-r from-cyan-500 to-blue-500 flex items-center justify-center p-[100px]">
+    <div class="flex-col">
+        <div class="flex flex-col justify-center items-center">
+            <img src="/image/WhatsApp Image.jpeg" alt="profile picture" class="w-[150px] h-[150px] rounded-full"/>
+            <h3 class="text-white m-[px] font-bold text-[25px]">Faiz Pragata</h3>
         </div>
-        
-        <div id="link">
-          <a href="" target="_blank" class="link_items">My projects</a>
-          <a href="https://github.com/FaizArsyiP" target="_blank" class="link_items">Github</a>
-          <a href="https://www.linkedin.com/in/faiz-pragata-8b1960169/" target="_blank" class="link_items">Linkedin</a>
-          <a href="https://www.instagram.com/faiz.pragata/" target="_blank" class="link_items">Instagram</a>
-          <a href="" target="_blank" class="link_items">blank</a>
+        <div class="block m-[5px] min-w-[550px] w-auto m-auto">
+            <a href="" target="_blank" class="link">My projects</a>
+            <a href="https://github.com/FaizArsyiP" target="_blank" class="link">Github</a>
+            <a href="https://www.linkedin.com/in/faiz-pragata-8b1960169/" target="_blank" class="link">Linkedin</a>
+            <a href="https://www.instagram.com/faiz.pragata/" target="_blank" class="link">Instagram</a>
+            <a href="" target="_blank" class="link">blank</a>
         </div>
-      </div>
-    </body>
+    </div>
+</body>
 </html>
